# docs/openapi.json
@@ -1523,6 +1523,10 @@
             "title": "Release",
             "type": "string"
           },
+          "release_tested": {
+            "title": "Release Tested",
+            "type": "boolean"
+          },
           "unreachable_since": {
             "anyOf": [
               {
@@ -1543,6 +1547,7 @@
           "connected_at",
           "info",
           "release",
+          "release_tested",
           "license",
           "app_version",
           "credentials_ok"
